More complex polar fixes.